@@ -105,7 +105,7 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-12-15 17:49:45 L.16 '22215 T832972925 .K ~1069+----+----+----+----+----+
+     Zndex_E : //z 2015-12-17 13:22:08 L.14 '38272 T95047569  .K ~1070+----+----+----+----+----+
      TimeCnt : //z 2015-12-15 17:48:58 L.16 '22262 T832937024 .K ~66  +----+----+----+----+----+
      Reg.Cnt : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44  +----+----+----+----+----+
      #44  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44    V+.1104 L+.1169 
@@ -156,7 +156,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-12-15 17:49:45 L.16 '22215 T832972925 .K ~1113  R+.44   L+.1171 --+----+
+     Version : //z 2015-12-17 13:22:08 L.14 '38272 T95047569  .K ~1114  R+.14   L+.444  --+----+
      #58  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~1104  R+.44   L+.1170 V+.1104 
      #58  V+ : //z 2015-12-14 18:09:58 L.17 '21002 T2051895869.K ~1102  R+.43   L+.1159 
      #57  R+ : //z 2015-12-11 17:20:18 L.20 '23982 T559072046 .K ~1085  R+.43   L+.1147 V+.1085 
@@ -440,6 +440,8 @@ http://www.the-labs.com/Blender/3DS-details.html
 http://www.spacesimulator.net/tutorials/3ds_loader_tutorial.html
 
 2015-05-26 16:59 zitem haptix/evolution3d googlecode
+
+2015-12-17 13:21 znote 3ds max 2015 中文帮助 http://help.autodesk.com/view/3DSMAX/2015/CHS/ 
 #endregion //z 2015-05-21 17:49:30 L.224'22230 BG57IV3@XCL T1505065974.K.F4146951713-+----+----+
 
 #region 05-22 17:22 R#.15   @CMakeFile
