@@ -6298,3 +6298,14 @@ Changes to be committed:
 	modified:   ZGame/3dsMax/FBX/contentexporter/exportobjects/exportscene.cpp
 	modified:   ZGame/3dsMax/FBX/contentexporter/sdkmeshfilewriter/sdkmeshfilewriter.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/12/17.17_57_33.66.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
